# datafusion-functions-extra

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  taplo.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  stale.yml
benches/: mode.rs
ci/scripts/: rust_clippy.sh
src/: kurtosis.rs  kurtosis_pop.rs  lib.rs  macros.rs  max_min_by.rs  mode.rs  skewness.rs
src/common/: collections.rs  mod.rs  mode.rs
src/common/collections/: binary_map.rs  binary_view_map.rs
src/common/mode/: bytes.rs  native.rs
tests/: main.rs
tests/sqllogictest/: sqllogictest.rs  test_context.rs
tests/sqllogictest/slt/: create_table.slt  kurtosis.slt  kurtosis_pop.slt  max_by_and_min_by.slt  mode.slt  skewness.slt
tests/sqllogictest/utils/: mod.rs
tests/utils/: mod.rs
