# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-functions-extra"
version = "0.1.0"
edition = "2021"
description = "Extra Functions for DataFusion"
readme = "README.md"
license = "Apache-2.0"
keywords = ["datafusion", "functions-extra", "aggregations"]
repository = "https://github.com/datafusion-contrib/datafusion-functions-extra/"
rust-version = "1.76"

[lib]
name = "datafusion_functions_extra"
path = "src/lib.rs"

[dependencies]
ahash = { version = "0.8", default-features = false, features = [
    "runtime-rng",
] }
datafusion = "42"
hashbrown = { version = "0.14.5", features = ["raw"] }
log = "^0.4"
paste = "1"
arrow = { version = "53.0.0", features = ["test_utils"] }

[dev-dependencies]
arrow = { version = "53.0.0", features = ["test_utils"] }
criterion = { version = "0.5", features = ["async_tokio"] }
insta = { version = "1.40.0", features = ["yaml"] }
tokio = { version = "1.36", features = ["full"] }

[lints.clippy]
dbg_macro = "deny"
print_stdout = "deny"

[[bench]]
name = "mode"
harness = false
