# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-extra-functions"
version = "0.4.0"
edition = "2024"
description = "Extra Functions for DataFusion"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "aggregations",
    "datafusion",
    "functions-extra",
]
repository = "https://github.com/datafusion-contrib/datafusion-extra-functions/"

[dependencies]
log = "0.4"
paste = "1.0"

[dependencies.datafusion]
default-features = false
version = "50.3"

[dev-dependencies]
criterion = "0.7"
rand = "0.9"
tokio = "1.48"

[dev-dependencies.arrow]
default-features = false
features = [
    "test_utils",
]
version = "56.0"

[dev-dependencies.insta]
features = [
    "yaml",
]
version = "1.43"

[[bench]]
name = "mode"
harness = false

[lints.clippy]
dbg_macro = "deny"
print_stdout = "deny"
